--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,321 @@
 
 */
 
-.page {
-  min-inline-size: 320px;
-  min-block-size: 100dvb;
+.container {
+    margin-inline: auto;
+	width: 100%;
+	max-width: var(--container-width);
+}
+
+.page{
+  font-family: var(--font-main);
+  min-height: 100dvh;
+  min-width: 320px;
+  margin: 0;
+  padding: 0;
+  font-variation-settings: 'wght' 400;
+  background-color: var(--bg-color); 
+  color: var(--text-color);
+}
+
+.page::before {
+  content: '';
+  height: var(--bg-image-height);
+  background-image: var(--bg-image);
+  background-attachment: fixed;
+  background-size: 1440px var(--bg-image-height);
+  background-position: top center;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
+}
+
+
+
+.header {
+  background-color: var(--bg-color); 
+  font-family: var(--font-title);
+  text-align: center;
+  text-transform: uppercase;
+  margin-block: 100px;
+  position: relative;
+  z-index: 1;
+  padding: clamp(7.5rem, 7.32rem + 0.75vw, 8rem) 0;
+  border: 2px solid var(--border-color);
+}
+
+.header-title {
+	font-variation-settings: 'wght' 700;
+	color: var(--text-color); 
+	font-size: clamp(0.875rem, 0.68rem + 0.85vw, 1.44rem);
+	margin-block-start: 20px;
+}
+
+.header-logo {
+	font-size: var(--title-size);
+	color: var(--text-color); 
+}
+
+.main__card {
+	background-color: var(--bg-color);
+	border: none;
+}
+
+.main__card:not(:first-child) {
+	margin-block-start: 49px;
+}
+
+.card__title {
+	display: block;
+	padding: 5px 10px;
+	background-color: var(--bg-color);
+	border: 2px solid var(--border-color);
+	font-weight: 700;
+	font-size: 18px;
+	font-family: var(--font-main);
+	font-variation-settings: 'wght' 700;
+	text-wrap: balance;
+	margin: 0;
+}
+
+.card__image {
+	display: flex;
+	position: relative;
+	border: none;
+}
+
+.card__images-mark {
+	line-height: 1.25;
+	font-family: var(--font-title);
+	opacity: 0.5;
+	position: absolute;
+	color: var(--text-color);
+	-webkit-text-stroke: 1px #fff;
+	top: 25px;
+	font-size: 14px;
+	right: 25px;
+	max-width: 320px;
+	text-align: end;
+	z-index: 1;
+}
+
+.card__image-item {
+	width: 100%;
+	object-position: center;
+	object-fit: cover;
+}
+
+.main__card:nth-child(2) .card__image-item {
+	filter: saturate(40%);
+}
+
+.main__card:nth-child(3) .card__image-item {
+	filter: brightness(3) contrast(80%) ;
+}
+
+.main__card:nth-child(4) .card__image-item {
+	filter: hue-rotate(400deg);
+}
+
+.main__card:nth-child(5) .card__image-item {
+	filter: invert(1) contrast(65%);
+}
+
+.main__card:nth-child(6) .card__image-item {
+	filter: sepia(1);
+}
+
+.main__card:nth-child(7) .card__image-item {
+	filter: blur(3px);
+}
+
+.main__card:nth-child(8) .card__image-item {
+	filter:  brightness(65%) contrast(65%) hue-rotate(90deg);
+}
+
+.card__content {
+	padding: 20px 25px 20px;
+	border: 2px solid var(--border-color);
+}
+
+.card__text {
+	font-variation-settings: 'wght' 400;
+	font-size: 18px;
+}
+
+.card__text:not(:first-child) {
+	margin-block-start: 27px;
+}
+
+.card__buttons {
+	margin-block-start: 22px;
+	gap: 4px;
+	justify-content: end;
+	display: flex;
+}
+
+.button {
+	position: relative;
+	font-family: var(--font-title);
+	cursor: pointer;
+	outline: none;
+	transition: box-shadow 0.3s ease;
+	color: var(--text-color);
+	background-color: var(--bg-color);
+	border: 2px solid var(--border-color);
+	overflow: hidden;
+}
+
+.button span,
+.button svg {
+	color: var(--text-color);
+}
+
+.button::before {
+	position: absolute;
+	content: '';
+	background-color: var(--text-color);
+	inset: 0;
+	transition: translate 0.5s ease-in-out;
+	z-index: -1;
+	translate: -100%;
+}
+
+.button:hover::before {
+	translate: 0;
+}
+
+.button:focus {
+	box-shadow: 2px 2px var(--text-color);
+}
+
+.like-icon .contour {
+	transition: fill 0.3s;
+	fill: var(--heart-contour);
+}
+
+.like-icon .core,
+.like-icon .main-body {
+	transition: fill 0.3s;
+	fill: none;
+}
+
+.like-icon .sparks {
+	opacity: 0;
+	fill: var(--heart-sparks);
+}
+
+.like-icon:active .core,
+.like-icon:active .main-body {
+	fill: var(--heart-sparks);
+}
+
+.like-icon:hover .core,
+.like-icon:hover .main-body {
+	fill: var(--heart-contour);
+}
+
+.like-icon.is-liked .contour,
+.like-icon.is-liked .core,
+.like-icon.is-liked .main-body {
+	fill: var(--heart-sparks);
+}
+
+.like-icon.is-liked .heart {
+	animation: scale 0.3s 0.1s ease-in;
+}
+
+.like-icon.is-liked .sparks {
+	opacity: 1;
+	animation: sparks 0.3s 0.3s ease-in;
+}
+
+.card__icon-button {
+	padding: 0;
+	justify-content: center;
+	display: flex;
+	align-items: center;
+	width: 42px;
+	height: 42px;
+	background: transparent;
+	border: 2px solid transparent;
+}
+
+.card__like-button {
+	line-height: 0.9;
+	padding: 11px 35px;
+	font-size: 14px;
+}
+
+.main__save-button {
+	align-items: center;
+	display: flex;
+	padding: 15px 20px;
+	gap: 8px;
+	margin: 50px auto 100px;
+}
+
+.main__save-button svg {
+	height: 21px;
+	width: 21px;
+}
+
+.card__icon-button:focus-visible {
+	border-color: var(--text-color);
+}
+
+
+.dialog {
+	border: 2px solid var(--border-color);
+	background-color: var(--bg-color);
+	padding: 30px;
+	width: 357px;
+	color: var(--text-color);
+}
+
+.dialog::backdrop {
+	background-color: var(--backdrop-color);
+}
+
+.dialog__content {
+	display: flex;
+	gap: 20px;
+	align-items: center;
+}
+
+.dialog__icon {
+	flex-shrink: 0;
+	width: 39px;
+	height: 39px;
+}
+
+.dialog__ok-button {
+	width: 100%;
+	padding-block: 10.5px;
+	margin-top: 30px;
+}
+
+.dialog__text {
+	line-height: 1.5;
+	font-size: 14px;
+	font-family: var(--font-title);
+	text-transform: uppercase;
+	margin: 0;
+}
+
+@supports (text-stroke: 1px #fff) or (-webkit-text-stroke: 1px #fff) {
+	.card__images-mark {
+		-webkit-text-stroke: 1px #fff;
+		text-shadow: none;
+	}
+}
+
+@media (width <= 375px) {
+	.main__save-button {
+		flex-direction: column;
+	}
 }
